<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/text"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="68dp"
        android:gravity="center_horizontal"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/scroll" />

    <ImageButton
        android:id="@+id/copy"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:layout_marginTop="68dp"
        android:background="@null"
        android:contentDescription="@string/descriptionImageButton"
        app:layout_constraintStart_toEndOf="@+id/text"
        app:layout_constraintTop_toBottomOf="@+id/scroll"
        app:srcCompat="?attr/actionModeCopyDrawable" />

    <Button
        android:id="@+id/button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:width="200dp"
        android:height="80dp"
        android:shadowColor="@color/red"
        android:text="@string/button"
        android:textColor="@color/black"
        android:textSize="20sp"
        app:cornerRadius="100dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text"
        app:rippleColor="@color/red"
        app:strokeColor="@color/red"
        tools:ignore="TextContrastCheck" />

    <ScrollView
        android:id="@+id/scroll"
        android:layout_width="409dp"
        android:layout_height="350dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/descriptionText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/descriptionText"
                android:textSize="20sp" />

            <CheckBox
                android:id="@+id/upperCheck"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:checked="true"
                android:text="@string/upper" />

            <CheckBox
                android:id="@+id/lowerCheck"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:checked="true"
                android:text="@string/lower" />

            <CheckBox
                android:id="@+id/specialCheck"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:checked="true"
                android:text="@string/special" />

            <CheckBox
                android:id="@+id/numberCheck"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:checked="true"
                android:text="@string/numbers" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/length"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/lengthHint"
                app:boxBackgroundColor="@null">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/lengthInputBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="number" />
            </com.google.android.material.textfield.TextInputLayout>
        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>